[package]
name = "echo_async_std"
version = "0.1.0"
authors = ["xiaokang5350 <xiaokang5350@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "*", features = ["attributes"]}
once_cell = "*"
structopt = "*"
